<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UpdateActivity</string>
    <string name="action_settings">Settings</string>
	<string name="swimmers_label">Swimmers</string>
	
	
	
	<!-- strings from BlueTerm -->

	<string name="alert_dialog_no_bt">Cannot use this application without bluetooth.</string>
	<string name="alert_dialog_yes">Yes</string>
	<string name="alert_dialog_no">No</string>
	<string name="alert_dialog_warning_title">Warning</string>
	<string name="alert_dialog_ok">OK</string>
	<string name="alert_dialog_turn_on_bt">This application needs bluetooth. Do you want to turn it on?</string>

    <string name="not_connected">You are not connected to a device</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    
    <!-- Application buttons -->
	<string name="button_start">Start</string>
	<string name="button_stop">Stop</string>
	<string name="button_export">Export</string>
	<string name="button_reset">Reset</string>
	
    <!-- Options Menu -->
    <string name="connect">Connect device</string>
    <string name="disconnect">Disconnect device</string>
    <string name="preferences">Preferences</string>    
    <string name="special_keys">Special keys</string>
    
    <!-- Preference dialog -->
    <string name="general_preferences">General</string>
    <string name="title_maxlaps_preference">Maximum laps</string>
    <string name="summary_maxlaps_preference">Select how many laps needed to finish.</string>
    <string name="default_maxlaps_preference">1</string>
    <string name="title_laplength_preference">Length of single lap</string>
    <string name="summary_laplength_preference">Length in meters is doubled as assumption is detector at one pool end.</string>
    <string name="default_laplength_preference">10</string>
    
    <!--  <string name="text_preferences">Text</string> -->
    <!--  <string name="dialog_title_fontsize_preference">Maximum laps</string>  -->

    <string name="title_document_key_press">Press</string>
    <string name="title_document_key_rest">and Key</string>

   <!-- Don't localize these default values -->
   <string name="default_value_maxlaps_preference">1</string>

   
</resources>
