<?xml version="1.0" encoding="utf-8"?>

	<PreferenceScreen 
        xmlns:android="http://schemas.android.com/apk/res/android">
        
        <PreferenceCategory
            android:title="@string/general_preferences">

        	<ListPreference 
                android:key="maxlaps"
                android:defaultValue="@string/default_maxlaps_preference"
                android:title="@string/title_maxlaps_preference"
                android:summary="@string/summary_maxlaps_preference"
                android:entries="@array/entries_maxlaps_preference"
                android:entryValues="@array/entryvalues_maxlaps_preference" />
        	<ListPreference 
                android:key="laplength" 
                android:defaultValue="@string/default_laplength_preference"
                android:title="@string/title_laplength_preference"
                android:summary="@string/summary_laplength_preference"
                android:entries="@array/entries_lapLength_preference"
                android:entryValues="@array/entryvalues_lapLength_preference" />
            
    	</PreferenceCategory>
    </PreferenceScreen>

